Amazon Connector/src/objects/Event__c.object
<CustomObject>
    <description>This object is entry point for data flow within the system or externally. Each Event is always associated with a Topic.
The Retriever field would contain the Retriever information in the form of a JSon or the Content itself can be embedded in the Content field (json format).</description>
    <fields>
        <fullName>ContentJSON__c</fullName>
        <label>Content(JSON)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventStateID__c</fullName>
        <label>EventStateID</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrieval-InProgress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EventTime__c</fullName>
        <label>EventTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FailureReason__c</fullName>
        <label>FailureReason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RetrieverInfo__c</fullName>
        <label>RetrieverInfo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SourceSystemID__c</fullName>
        <label>SourceSystemID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SourceSystem</label>
        <referenceTo>System__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TopicID__c</fullName>
        <label>TopicID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <referenceTo>Topic__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RetrieverInfo__c</columns>
        <columns>ContentJSON__c</columns>
        <columns>EventStateID__c</columns>
        <columns>SourceSystemID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Completed_Events</fullName>
        <columns>NAME</columns>
        <columns>Topic__c</columns>
        <columns>ContentJSON__c</columns>
        <filterScope>Everything</filterScope>
        <label>Completed Events</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>